--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -1,30 +1,22 @@
 version: 1
 update_configs:
   - package_manager: "rust:cargo"
-    directory: "/core/lib"
+    directory: "/"
     update_schedule: "live"
 
     default_reviewers:
         - "brndnmtthws"
 
-    automerged_updates:
-      - match:
-          dependency_type: "development"
-          update_type: "all"
-      - match:
-          dependency_type: "production"
-          update_type: "security:patch"
+  - package_manager: "rust:cargo"
+    directory: "/core/lib"
+    update_schedule: "live"
+
+    default_reviewers:
+        - "brndnmtthws"
+  
   - package_manager: "rust:cargo"
     directory: "/core/codegen"
     update_schedule: "live"
 
     default_reviewers:
         - "brndnmtthws"
-
-    automerged_updates:
-      - match:
-          dependency_type: "development"
-          update_type: "all"
-      - match:
-          dependency_type: "production"
-          update_type: "security:patch"
