--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ x86_64-unknown-linux-gnu build: *build_script
     - cargo test --verbose --all --target $TARGET
     - |
       if [[ "$TARGET" == "x86_64-unknown-linux-gnu" ]]; then
-        cargo tarpaulin --out Xml && bash <(curl -s https://codecov.io/bash)
+        cargo tarpaulin --out Xml
       fi
   coverage: '/(\d+.\d+%) coverage,/'
   cache:
