--- a/core/lib/Cargo.toml
+++ b/core/lib/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 license = "MIT"
 description = "instrument your code"
 repository = "https://github.com/umpyre-code/instrumented"
+readme = "../../README.md"
+categories = ["development-tools", "development-tools::build-utils"]
+keywords = ["instrument", "metrics", "monitoring", "instrumentation"]
 
 [dependencies]
 hyper = "0.12"
