--- a/core/lib/Cargo.toml
+++ b/core/lib/Cargo.toml
@@ -17,3 +17,6 @@ lazy_static = "1.0"
 log = "0.4"
 prometheus = { version = "0.7", features = ["nightly", "process"]}
 tokio = "0.1"
+
+[dev-dependencies]
+reqwest = "0.9"
