--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["Brenden Matthews <brenden@diddyinc.com>"]
 edition = "2018"
 license = "MIT"
+description = "instrument your code"
+repository = "https://github.com/umpyre-code/instrumented"
+readme = "../README.md"
+categories = ["development-tools", "development-tools::build-utils"]
+keywords = ["instrument", "metrics", "monitoring", "instrumentation"]
 
 [dependencies]
 instrumented = { path = "../core/lib" }
